# todo-list

./: pyproject.toml
todo-list/app/: choices.py  models.py  serializers.py  urls.py  views.py
todo-list/app/migrations/: 0001_initial.py
todo-list/todo/: settings.py  urls.py
